[tool.poetry]
name = "rede"
version = "0.1.0"
description = "Implementando uma Deep Learn do Zero em Python"
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.2.2"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
